# crypto-connectors

./: .gitignore  Cargo.toml  Dockerfile  README.md  nats-compose.yml  test-compose.yml
.github/workflows/: rust.yml
http/: Cargo.toml  README.md
http/src/: lib.rs  server.rs
http/src/healthcheck/: api.rs  checks.rs  mod.rs  service.rs
http/src/metrics/: api.rs  service.rs
http/src/models/: errors.rs  response.rs
http/src/utils/: errors.rs
protocol/: Cargo.toml  README.md  build.rs
protocol/proto/: book.proto  error.proto  market.proto  ticker.proto  trade.proto  types.proto
protocol/src/: client.rs  lib.rs  model.rs  topics.rs
public-connector/: Cargo.toml  README.md
public-connector/src/: config.rs  decoder.rs  http_client.rs  lib.rs  subscription.rs
public-connector/src/utils/: check.rs  mod.rs  tracing.rs
public-cryptocom/: Cargo.toml  README.md
public-cryptocom/resources/: exchange.toml  nats.toml
public-cryptocom/src/: config.rs  lib.rs  main.rs  model.rs  topics.rs
public-cryptocom/src/book/: models.rs  state.rs  stream.rs
public-cryptocom/src/client/: mod.rs  request.rs  response.rs  ws_client.rs
public-cryptocom/src/markets/: handler.rs  mod.rs  models.rs
public-cryptocom/src/ticker/: models.rs  state.rs  stream.rs
public-cryptocom/src/trades/: mod.rs  models.rs  state.rs  stream.rs
public-cryptocom/src/utils/: handler.rs  mod.rs  state.rs  stream.rs
public-cryptocom/tests/: all_markets_test.rs  error_markets_test.rs  filtered_markets_test.rs  markets_test.rs  ticker_test.rs  trades_test.rs
public-kraken/: Cargo.toml  README.md
public-kraken/resources/: exchange.toml  http.toml
public-kraken/src/: config.rs  main.rs  model.rs  topics.rs
public-kraken/src/client/: response.rs
public-kraken/src/markets/: handler.rs  models.rs  stream.rs
sdk/: Cargo.toml  README.md
sdk/examples/: book_example.rs  markets_example.rs  ticker_example.rs  trades_example.rs
sdk/src/: connector.rs  decoder.rs  lib.rs  subscription.rs
