[package]
name = "http"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
axum-prometheus = "0.8.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }


[dev-dependencies]
tokio = "1.42.0"
axum-test = "17.0.1"
serde_json = "1.0.135"