[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.13.4"
config = "0.15.4"
chrono = "0.4.38"
anyhow = "1.0.95"
futures = "0.3.31"
async-nats = "0.38.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }

# logs
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

# iternal
http = "0.1.0"
protocol = "0.1.0"
